fix overflow-x and remove decoration from a href

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  max-width: 100vw;
 }
 
 * {
@@ -10,4 +11,9 @@ html, body {
 
 a {
   color: inherit;
+  text-decoration: none;
+}
+
+#___gatsby {
+  overflow-x: hidden;
 }
